Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4571

Fix "pointer to local outside scope" (CID 1356978)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • Parent Proxy
    • None

    Description

      Dereferencing the returned or out-of-scope stack pointer will access an invalid location on the stack after its scope or after the function returns.
      In ParentRecord::​Init(matcher_line *): Pointer to a local stack variable returned or used outside scope (CWE-562)
      

      Attachments

        Issue Links

          Activity

            People

              psudaemon Phil Sorber
              psudaemon Phil Sorber
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: