TS-4571: Fix "pointer to local outside scope" (CID 1356978) (#727)